SERVER-9328 Race in migrate protocol can cause moveChunk cmd to hang